# capacitive-dance-pad-pico

./: .gitignore  CMakeLists.txt  Justfile  capacitive-dance-pad-pico.cpp  config.h  config_defines.h  config_values.hpp  custom_logging.cpp  custom_logging.hpp  custom_teleplot_layout.json  multicore_ipc.cpp  multicore_ipc.h  notes.md  running_stats.hpp  serial_config_console.cpp  serial_config_console.hpp  teleplot_layout_2024-6-29_22-1.json  touch.pio  touch_sensor_config.hpp  touch_sensor_thread.cpp  touch_sensor_thread.hpp  tusb_config.h  usb_descriptors.c
src/: capacitive-dance-pad-pico.cpp  config_values.hpp  custom_logging.cpp  custom_logging.hpp  main.cpp  multicore_ipc.cpp  multicore_ipc.h  reset_interface.c  running_stats.hpp  sensor_data_filter.hpp  serial_config_console.cpp  serial_config_console.hpp  teleplot_task.cpp  teleplot_task.hpp  touch_hid_tasks.cpp  touch_hid_tasks.hpp  touch_sensor_config.hpp  touch_sensor_config_itg.hpp  touch_sensor_config_itg8.hpp  touch_sensor_config_pump.hpp  touch_sensor_config_pump2.hpp  touch_sensor_thread.cpp  touch_sensor_thread.hpp  tusb_config.h
